# medical_nic

./: .gitignore  auth.py  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
db_backup/: medical_nic_dump.sql
routers/: allocation.py  candidate.py  course.py  institute.py  institutequota.py  round.py
