[project]
name = "medical Nic"
version = "0.1.0"
description = "Just do what you want"
authors = [
  { name="Bronson Yumnam", email="your-email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "mysqlclient",
  "passlib[bcrypt]",
  "python-jose",
  "pydantic",
  "typing-extensions"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["leave_management_system"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true